syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.github.saturn_xiv.palm.plugins.auth.v1";
package palm.auth.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "nut.proto";
import "rbac.proto";
import "orchid.proto";

message UserDetail {
  string nickname = 1;
  string real_name = 2;
}

message Oauth2State {
  string goto = 1;
  string host = 2;
  optional string user = 3;
  string id = 9;
}

// ----------------------------------------------------------------------------

service User {
  rpc SignIn(UserSignInRequest) returns (UserSignInResponse) {}
  rpc SignUp(UserSignUpRequest) returns (google.protobuf.Empty) {}
  rpc ConfirmByEmail(UserQueryRequest) returns (google.protobuf.Empty) {}
  rpc ConfirmByToken(UserTokenRequest) returns (google.protobuf.Empty) {}
  rpc UnlockByEmail(UserQueryRequest) returns (google.protobuf.Empty) {}
  rpc UnlockByToken(UserTokenRequest) returns (google.protobuf.Empty) {}
  rpc ForgotPassword(UserQueryRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword(UserResetPasswordRequest) returns (google.protobuf.Empty) {}

  rpc Refresh(google.protobuf.Duration) returns (UserSignInResponse) {}
  rpc Logs(palm.nut.v1.Pager) returns (UserLogsResponse) {}
  rpc SetProfile(UserSetProfileRequest) returns (google.protobuf.Empty) {}
  rpc ChangePassword(UserChangePasswordRequest)
      returns (google.protobuf.Empty) {}
  rpc SignOut(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc Index(palm.nut.v1.Pager) returns (UserIndexResponse) {}
  rpc Show(palm.nut.v1.IdRequest) returns (UserIndexResponse.Item) {}
  rpc Disable(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Enable(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Lock(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Unlock(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Confirm(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Delete(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc SetPassword(UserSetPasswordRequest) returns (google.protobuf.Empty) {}
}

message UserSignInRequest {
  oneof user {
    string nickname = 1;
    string email = 2;
  }
  string password = 9;
  google.protobuf.Duration ttl = 11;
}

message UserQueryRequest {
  oneof user {
    string nickname = 1;
    string email = 2;
  }
  string home = 9;
}

message UserSignInResponse {
  string token = 1;
  UserIndexResponse.Item user = 2;
  string provider_type = 9;

  repeated string roles = 11;
  repeated palm.rbac.v1.Permission permissions = 12;

  bool has_google = 21;
  bool has_wechat_mini_program = 22;
  bool has_wechat_oauth2 = 23;
}

message UserSignUpRequest {
  string real_name = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
  string lang = 11;
  string timezone = 12;
  string home = 21;
}

message UserTokenRequest {
  string payload = 1;
}

message UserResetPasswordRequest {
  string token = 1;
  string password = 2;
}

message UserSetPasswordRequest {
  int32 user = 1;
  string password = 2;
}

message UserSetProfileRequest {
  string real_name = 1;
  string avatar = 2;
  string timezone = 8;
  string lang = 9;
  string wechat = 11;
  string phone = 12;
}

message UserGetProfileResponse {
  string real_name = 1;
  string avatar = 2;
  string nickname = 3;
  string email = 4;
  string timezone = 8;
  string lang = 9;
  string wechat = 11;
  string phone = 12;
}

message UserLogsResponse {
  message Item {
    enum Level {
      DEBUG = 0;
      INFO = 1;
      WARNING = 2;
      ERROR = 3;
      PANIC = 4;
    }
    int32 id = 1;
    int32 user_id = 2;
    string ip = 3;
    Level level = 4;
    string message = 5;
    palm.rbac.v1.Resource resource = 6;
    google.protobuf.Timestamp created_at = 11;
  }

  palm.nut.v1.Pagination pagination = 1;
  repeated Item items = 11;
}
message UserChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message UserIndexResponse {
  message Item {
    int32 id = 1;
    string email = 2;
    string nickname = 3;
    string real_name = 4;
    google.protobuf.Timestamp updated_at = 9;
    optional google.protobuf.Timestamp last_sign_in_at = 11;
    optional string last_sign_in_ip = 12;
    optional google.protobuf.Timestamp current_sign_in_at = 13;
    optional string current_sign_in_ip = 14;
    int32 sign_in_count = 19;
    string lang = 21;
    string timezone = 22;
    string avatar = 23;
    optional google.protobuf.Timestamp confirmed_at = 27;
    optional google.protobuf.Timestamp locked_at = 28;
    optional google.protobuf.Timestamp deleted_at = 29;
  }

  palm.nut.v1.Pagination pagination = 1;
  repeated Item items = 11;
}

// ----------------------------------------------------------------------------
service Google {
  rpc SignInUrl(GoogleSignInUrlRequest) returns (GoogleSignInUrlResponse) {}
  rpc SignIn(SignInByGoogleRequest) returns (UserSignInResponse) {}
}

message SignInByGoogleRequest {
  repeated string scopes = 1;
  string code = 2;
  string state = 3;
  string redirect_uri = 4;

  string nonce = 9;
  google.protobuf.Duration ttl = 11;
}

message GoogleSignInUrlRequest {
  string redirect_uri = 1;
  Oauth2State state = 2;
}

message GoogleSignInUrlResponse {
  string url = 1;
  string nonce = 2;
}
// ----------------------------------------------------------------------------
service Wechat {
  rpc Oauth2SignInState(google.protobuf.Empty)
      returns (WechatOauth2SignInStateResponse) {}
  rpc Oauth2SignInUrl(WechatOauth2SignInUrlRequest)
      returns (palm.orchid.v1.WechatOauth2QrConnectResponse) {}
  rpc SignInByOauth2(SignInByWechatOauth2Request) returns (UserSignInResponse) {
  }
  rpc AllOauth2User(google.protobuf.Empty)
      returns (WechatAllOauth2UserResponse) {}
  rpc DestroyOauth2User(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {
  }
  rpc BindOauth2UserById(WechatUserBindByIdRequest)
      returns (google.protobuf.Empty) {}
  rpc BindOauth2UserByAccount(WechatUserBindByAccountRequest)
      returns (google.protobuf.Empty) {}
  rpc GetOauth2UserById(palm.nut.v1.IdRequest)
      returns (WechatAllOauth2UserResponse.Item) {}
  rpc GetOauth2UserByOpenId(WechatUserQueryByOpenIdRequest)
      returns (WechatAllOauth2UserResponse.Item) {}
  rpc GetOauth2UserByUnionId(WechatUserQueryByUnionIdRequest)
      returns (WechatAllOauth2UserResponse) {}

  rpc AllMiniProgramUser(google.protobuf.Empty)
      returns (WechatAllMiniProgramUserResponse) {}
  rpc DestroyMiniProgramUser(palm.nut.v1.IdRequest)
      returns (google.protobuf.Empty) {}
  rpc BindMiniProgramUserById(WechatUserBindByIdRequest)
      returns (google.protobuf.Empty) {}
  rpc GetMiniProgramUserById(palm.nut.v1.IdRequest)
      returns (WechatAllMiniProgramUserResponse.Item) {}
  rpc GetMiniProgramUserByOpenId(WechatUserQueryByOpenIdRequest)
      returns (WechatAllMiniProgramUserResponse.Item) {}
  rpc GetMiniProgramUserByUnionId(WechatUserQueryByUnionIdRequest)
      returns (WechatAllMiniProgramUserResponse) {}
}

message WechatUserBindByIdRequest {
  int32 user_id = 1;
  int32 wechat_user_id = 2;
}

message WechatUserBindByAccountRequest {
  string nickname = 1;
  string password = 2;
}

message WechatUserQueryByOpenIdRequest {
  string app_id = 1;
  string open_id = 2;
}

message WechatUserQueryByUnionIdRequest {
  string union_id = 1;
}

message WechatAllMiniProgramUserResponse {
  message Item {
    int32 id = 1;
    int32 user_id = 2;
    string union_id = 3;
    string app_id = 4;
    string open_id = 5;
    optional string nickname = 11;
    optional string avatar_url = 12;
  }
  repeated Item items = 1;
}
message WechatAllOauth2UserResponse {
  message Item {
    int32 id = 1;
    int32 user_id = 2;
    string union_id = 3;
    string app_id = 4;
    string open_id = 5;
    string nickname = 11;
    int32 sex = 12;
    string city = 13;
    string province = 14;
    string country = 15;
    optional string head_img_url = 16;
    repeated string privilege = 17;
    string lang = 18;
  }
  repeated Item items = 1;
}

message SignInByWechatOauth2Request {
  string state = 1;
  string code = 2;
  string app_id = 3;

  palm.orchid.v1.WechatOauth2QrConnectRequest.Language language = 8;

  google.protobuf.Duration ttl = 11;
}

message WechatOauth2SignInStateResponse {
  string state = 1;
}

message WechatOauth2SignInUrlRequest {
  string app_id = 1;
  string redirect_uri = 2;
  palm.orchid.v1.WechatOauth2QrConnectRequest.Language language = 3;
}

message WechatMiniProgramUser {
  string app_id = 11;
  string open_id = 12;
  string union_id = 13;
  optional string nickname = 21;
  optional string avatar_url = 22;
}

// ----------------------------------------------------------------------------

service Attachment {
  rpc Index(palm.nut.v1.Pager) returns (AttachmentIndexResponse) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Show(AttachmentShowRequest) returns (AttachmentShowResponse) {}
}
message AttachmentShowRequest {
  int32 id = 1;
  google.protobuf.Duration ttl = 2;
}
message AttachmentShowResponse {
  AttachmentIndexResponse.Item item = 1;
  string url = 2;
}

message AttachmentIndexResponse {
  message Item {
    int32 id = 1;
    string bucket = 2;
    string name = 3;
    string title = 4;
    int64 size = 5;
    string content_type = 6;
    palm.nut.v1.MediaContent.Status status = 7;

    google.protobuf.Timestamp updated_at = 11;
  }
  palm.nut.v1.Pagination pagination = 1;
  repeated Item items = 11;
}

// ----------------------------------------------------------------------------

service Locale {
  rpc Create(LocaleCreateRequest) returns (google.protobuf.Empty) {}
  rpc Update(LocaleUpdateRequest) returns (google.protobuf.Empty) {}
  rpc ByLangAndCode(LocaleByLangAndCodeRequest)
      returns (LocaleIndexResponse.Item) {}
  rpc ById(palm.nut.v1.IdRequest) returns (LocaleIndexResponse.Item) {}
  rpc ByLang(LocaleByLangRequest) returns (LocaleListResponse) {}
  rpc ByCode(LocaleByCodeRequest) returns (LocaleListResponse) {}
  rpc Index(palm.nut.v1.Pager) returns (LocaleIndexResponse) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
}

message LocaleByLangRequest {
  string lang = 1;
}

message LocaleListResponse {
  repeated LocaleIndexResponse.Item items = 1;
}

message LocaleIndexResponse {
  message Item {
    int32 id = 1;
    string lang = 2;
    string code = 3;
    string message = 4;
    google.protobuf.Timestamp updated_at = 9;
  }
  repeated Item items = 1;
  palm.nut.v1.Pagination pagination = 9;
}
message LocaleByCodeRequest {
  string code = 1;
}
message LocaleByLangAndCodeRequest {
  string lang = 1;
  string code = 2;
}
message LocaleCreateRequest {
  string lang = 1;
  string code = 2;
  string message = 3;
}
message LocaleUpdateRequest {
  int32 id = 1;
  string message = 2;
}
